--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "art-template": "^3.0.3",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.1",
     "connect-mongo": "^0.8.2",
