--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "art-template": "^3.0.3",
+    "async": "^1.5.0",
     "bcrypt": "^0.8.5",
     "body-parser": "~1.13.1",
     "connect-mongo": "^0.8.2",
